# SHELL-E

./: .gitignore  README.md  removemeta.sh
Camera/: README.md
Camera/Files/: camera_viewer_node.py  setup.py  turtlebot3_burger.urdf
Path-planning/PathPlanning/: PathPlanning.sln
Path-planning/PathPlanning/PathPlanning/: PathPlanning.vcxproj
Path-planning/PathPlanning/src/: Grid.cs  Node.cs
Resources/: README.md
ros2_ws/src/turtlebot3_lidar_listener/: README.md  setup.py
ros2_ws/src/turtlebot3_lidar_listener/turtlebot3_lidar_listener/: _init_.py  lidar_listener.py
ros2_ws2/src/turtlebot3_lidar_listener/: README.md  package.xml  setup.py
ros2_ws2/src/turtlebot3_lidar_listener/launch/: autonav_launch.py  my_navigation2.launch.py  my_robot.launch.py  my_turtlebot3_state_publisher.launch.py  object_avoidance.launch.py
ros2_ws2/src/turtlebot3_lidar_listener/turtlebot3_lidar_listener/: _init_.py  lidar_listener.py  turtlebot3_obstacle_detection.py
